--- a/public/style.css
+++ b/public/style.css
@@ -107,7 +107,7 @@ a:hover {
 .main-content {
     max-width: 1000px;
     margin: 2rem auto;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 /* Formularios */
@@ -119,6 +119,7 @@ a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: 2rem auto;
+    width: 400px;
 }
 
 .form-container h1,
@@ -1156,7 +1157,6 @@ body {
 .navbar-search form {
     display: flex;
     width: 100%;
-    max-width: 700px;
 }
 
 .search-input {
@@ -1167,7 +1167,7 @@ body {
     outline: none;
     font-size: 1rem;
     color: #333; 
-    max-width: 700px;
+    max-width: 100%;
 }
 
 .search-input:focus {
@@ -1179,7 +1179,7 @@ body {
     color: white;
     border: none;
     padding: 10px 15px; 
-    border-radius: 0 25px 25px 0; 
+    border-radius: 0 25px 25px 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-size: 1.1rem; 
