--- a/public/style.css
+++ b/public/style.css
@@ -1147,45 +1147,46 @@ body {
 }
 /* Estilos para la barra de búsqueda en el Navbar */
 .navbar-search {
-    flex-grow: 0.8; 
+    flex-grow: 0.8;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 20px; 
+    margin: 0 10px; 
 }
 
 .navbar-search form {
     display: flex;
     width: 100%;
+    max-width: 650px; 
+    margin: 0 auto; 
 }
 
 .search-input {
     flex-grow: 1;
-    padding: 10px 18px;
+    padding: 8px 15px; 
     border: 1px solid #ddd;
     border-radius: 25px 0 0 25px; 
     outline: none;
     font-size: 1rem;
-    color: #333; 
-    max-width: 100%;
+    color: #333;
 }
 
 .search-input:focus {
-    border-color: #ff7f50; 
+    border-color: #ff7f50;
 }
 
 .search-button {
     background-color: #ff7f50;
     color: white;
     border: none;
-    padding: 10px 15px; 
-    border-radius: 0 25px 25px 0;
+    padding: 8px 15px; 
+    border-radius: 0 25px 25px 0; 
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-size: 1.1rem; 
     display: flex; 
-    align-items: center;
-    justify-content: center;
+    align-items: center; 
+    justify-content: center; 
 }
 
 .search-button:hover {
